--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,21 @@
 {
+	"name": "wp-plugin-studio",
+	"type": "wordpress-plugin",
+	"description": "An interface for building WordPress plugins and themes",
+	"license": "GPL-2.0",
+	"require": {
+		"php": "^7"
+	},
 	"require-dev": {
-	    "squizlabs/php_codesniffer": "3.*"
+	    "dealerdirect/phpcodesniffer-composer-installer": "0.7.0",
+	    "phpcompatibility/phpcompatibility-wp": "2.1.0",
+	    "squizlabs/php_codesniffer": "3.5.3",
+	    "wp-coding-standards/wpcs": "2.2.0",
+	    "phpunit/phpunit": "7.5.2"
+	},
+	"scripts": {
+	    "test": [
+		   "phpunit"
+	    ]
 	}
  }
