--- a/custom-modules/maintainer/package.json
+++ b/custom-modules/maintainer/package.json
@@ -16,7 +16,9 @@
 		"@wordpress/i18n": "^4.1.1",
 		"chonky": "^2.2.0",
 		"chonky-icon-fontawesome": "^2.2.0",
-		"daisyui": "^1.11.0"
+		"daisyui": "^1.11.0",
+		"xterm": "^4.14.1",
+		"xterm-for-react": "^1.0.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.3",
