--- a/custom-modules/plugin-boiler/plugin-boiler/package.json
+++ b/custom-modules/plugin-boiler/plugin-boiler/package.json
@@ -1,17 +1,12 @@
 {
-	"name": "addonbuilder",
+	"name": "plugin-boiler",
 	"version": "1.0.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/johnstonphilip/addonbuilder/"
+		"url": ""
 	},
 	"scripts": {
-		"installation": "sh ./.scripts/install-scripts.sh",
-		"dev": "sh ./.scripts/dev-scripts.sh",
-		"build": "sh ./.scripts/dev-scripts.sh",
-		"lint": "sh ./.scripts/lint-scripts.sh"
-	},
-	"dependencies": {
-		"react-keyed-file-browser": "^1.11.0"
+		"installation": "sh ./.scripts/install.sh",
+		"dev": "sh ./.scripts/dev.sh"
 	}
 }
