Modal component added

--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-	"name": "addonbuilder",
+	"name": "wp-plugin-studio",
 	"version": "1.0.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/johnstonphilip/addonbuilder/"
+		"url": "https://github.com/johnstonphilip/wp-plugin-studio/"
 	},
 	"scripts": {
 		"installation": "sh ./.scripts/install-scripts.sh",
 		"dev": "sh ./.scripts/dev-scripts.sh",
 		"build": "sh ./.scripts/dev-scripts.sh",
 		"lint": "sh ./.scripts/lint-scripts.sh"
-	},
-	"dependencies": {
-		"react-keyed-file-browser": "^1.11.0"
 	}
 }
