--- a/custom-modules/maintainer/package.json
+++ b/custom-modules/maintainer/package.json
@@ -11,14 +11,8 @@
 		"lint": "sh ./.scripts/lint-scripts.sh"
 	},
 	"dependencies": {
-		"@stripe/react-stripe-js": "^1.4.1",
-		"@stripe/stripe-js": "^1.15.0",
 		"@wordpress/i18n": "^4.1.1",
-		"chonky": "^2.2.0",
-		"chonky-icon-fontawesome": "^2.2.0",
-		"daisyui": "^1.11.0",
-		"xterm": "^4.14.1",
-		"xterm-for-react": "^1.0.4"
+		"daisyui": "^1.11.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.3",
