custom-modules becomes wp-modules

--- a/wp-modules/plugin-boiler/plugin-boiler/package.json
+++ b/wp-modules/plugin-boiler/plugin-boiler/package.json
@@ -7,8 +7,6 @@
 	},
 	"scripts": {
 		"installation": "sh ./.scripts/install.sh",
-		"dev": "sh ./.scripts/dev.sh",
-		"dev:js": "sh ./.scripts/dev-js.sh",
-		"dev:css": "sh ./.scripts/dev-css.sh"
+		"dev": "sh ./.scripts/dev.sh"
 	}
 }
