--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "wp-plugin-studio",
+	"name": "wp-plugin-studio/wp-plugin-studio",
 	"type": "wordpress-plugin",
 	"description": "An interface for building WordPress plugins and themes",
 	"license": "GPL-2.0",
@@ -11,7 +11,7 @@
 	    "phpcompatibility/phpcompatibility-wp": "2.1.0",
 	    "squizlabs/php_codesniffer": "3.5.3",
 	    "wp-coding-standards/wpcs": "2.2.0",
-	    "phpunit/phpunit": "7.5.2"
+	    "phpunit/phpunit": "9.5"
 	},
 	"scripts": {
 	    "test": [
