Hoisted linting working

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
 	"scripts": {
 		"installation": "sh ./.scripts/install.sh",
 		"dev": "sh ./.scripts/dev.sh"
+	},
+	"devDependencies": {
+		"@wordpress/env": "^4.1.3"
 	}
 }
