--- a/wp-modules/linter/composer.json
+++ b/wp-modules/linter/composer.json
@@ -10,6 +10,8 @@
 	    "dealerdirect/phpcodesniffer-composer-installer": "0.7.0",
 	    "phpcompatibility/phpcompatibility-wp": "2.1.0",
 	    "squizlabs/php_codesniffer": "3.5.3",
-	    "wp-coding-standards/wpcs": "2.2.0"
+	    "wp-coding-standards/wpcs": "2.2.0",
+		"wp-phpunit/wp-phpunit": "^5.8",
+		"yoast/phpunit-polyfills": "^1.0"
 	}
- }
+}
