--- a/wp-modules/linter/package.json
+++ b/wp-modules/linter/package.json
@@ -7,20 +7,16 @@
 	},
 	"scripts": {
 		"format": "wp-scripts format",
-
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
-
 		"lint:md:docs": "wp-scripts lint-md-docs",
 		"lint:md:js": "wp-scripts lint-md-js",
-
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
-
 		"test:e2e": "wp-scripts test-e2e",
 		"test:unit": "wp-scripts test-unit-js"
-
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^19.1.0"
+		"@wordpress/scripts": "^19.1.0",
+		"@wordpress/env": "^4.1.3"
 	}
 }
