--- a/wp-modules/plugin-boiler/plugin-boiler/composer.json
+++ b/wp-modules/plugin-boiler/plugin-boiler/composer.json
@@ -7,5 +7,11 @@
         "installer-paths": {
             "wp-modules-external/{$name}": ["type:wp-module"]
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "oomphinc/composer-installers-extender": true
+        }
     }
 }
