--- a/wp-modules/plugin-boiler/plugin-boiler/package.json
+++ b/wp-modules/plugin-boiler/plugin-boiler/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "plugin-boiler",
 	"version": "1.0.0",
-	"license": "GPLv2",
+	"license": "GPL-2.0",
 	"repository": {
 		"type": "git",
 		"url": ""
