--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,15 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Install dependencies
-      uses: php-actions/composer@v6
-      with:
-        php_version: "7.4"
-        version: 2
   
     - name: Install wpps-scripts
       run: git clone https://github.com/wp-plugin-sidekick/wpps-scripts;
+      
+    - name: Cache Composer dependencies
+      uses: actions/cache@v2
+      with:
+        path: /tmp/composer-cache
+        key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
 
     - name: Run phpcs linting with WordPress Coding Standards
       run: cd wpps-scripts; sh phpcs.sh -p wp-plugin-sidekick -n WPPS -t wpps;
