--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,11 +17,16 @@ jobs:
     - name: Install wpps-scripts
       run: git clone https://github.com/wp-plugin-sidekick/wpps-scripts;
       
-    - name: Cache Composer dependencies
-      uses: actions/cache@v2
+    - name: Get Composer Cache Directory
+      id: composer-cache
+      run: |
+        echo "::set-output name=dir::$(composer config cache-files-dir)"
+    - uses: actions/cache@v2
       with:
-        path: /tmp/composer-cache
-        key: ${{ runner.os }}-${{ hashFiles('**/wpps-scripts/composer.lock') }}
+        path: ${{ steps.composer-cache.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/wpps-scripts/composer.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-composer-
 
     - name: Run phpcs linting with WordPress Coding Standards
       run: cd wpps-scripts; sh phpcs.sh -p wp-plugin-sidekick -n WPPS -t wpps;
