--- a/wp-modules/maintainer/package.json
+++ b/wp-modules/maintainer/package.json
@@ -1,29 +1,13 @@
 {
-	"name": "addonbuilder",
+	"name": "wp-plugin-sidekick",
 	"version": "1.0.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/johnstonphilip/addonbuilder/"
+		"url": "https://github.com/wp-plugin-sidekick/wp-plugin-sidekick/"
 	},
 	"scripts": {
 		"build": "wp-scripts build includes/js/src/index.js --output-path=includes/js/build/",
-		"check-engines": "wp-scripts check-engines",
-		"check-licenses": "wp-scripts check-licenses",
-		"format": "wp-scripts format",
-		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
-		"lint:js:fix": "npm run lint:js -- --fix",
-		"lint:md:docs": "wp-scripts lint-md-docs",
-		"lint:md:js": "wp-scripts lint-md-js",
-		"lint:pkg-json": "wp-scripts lint-pkg-json",
-		"packages-update": "wp-scripts packages-update",
-		"dev": "wp-scripts start includes/js/src/index.js --output-path=includes/js/build/",
-		"test:e2e": "wp-scripts test-e2e",
-		"test:unit": "wp-scripts test-unit-js"
-	},
-	"dependencies": {
-		"@wordpress/i18n": "^4.1.1",
-		"daisyui": "^1.11.0"
+		"dev": "wp-scripts start includes/js/src/index.js --output-path=includes/js/build/"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^22.1.0",
@@ -33,6 +17,8 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-tailwindcss": "^0.1.4",
 		"tailwindcss": "^3.0.18",
+		"@wordpress/i18n": "^4.1.1",
+		"daisyui": "^1.11.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
 	}
