--- a/wp-modules/plugin-boiler/plugin-boiler/package.json
+++ b/wp-modules/plugin-boiler/plugin-boiler/package.json
@@ -1,13 +1,25 @@
+
 {
 	"name": "plugin-boiler",
 	"version": "1.0.0",
 	"license": "GPL-2.0",
 	"repository": {
 		"type": "git",
-		"url": ""
+		"url": "your-repo-url-here"
 	},
+	"wpps_options": "-p your-plugin-directory-name -n YourPluginNamespace -t your-plugin-textdomain",
 	"scripts": {
-		"installation": "sh ./.scripts/install.sh",
-		"dev": "sh ./.scripts/dev.sh"
+		"preinstall": "if [ ! -d ../../wpps-scripts ]; then git clone https://github.com/wp-plugin-sidekick/wpps-scripts ../../wpps-scripts; else cd ../../wpps-scripts && git reset --hard && git checkout main && git pull origin main;fi;",
+		"dev": "cd ../../wpps-scripts; sh dev.sh $npm_package_wpps_options",
+		"build": "cd ../../wpps-scripts; sh build.sh $npm_package_wpps_options",
+		"test:phpunit": "cd ../../wpps-scripts; sh phpunit.sh $npm_package_wpps_options;",
+		"lint:php": "cd ../../wpps-scripts; sh phpcs.sh $npm_package_wpps_options;",
+		"lint:php:fix": "cd ../../wpps-scripts; sh phpcs.sh $npm_package_wpps_options -f 1;",
+		"lint:js": "cd ../../wpps-scripts; sh lint-js.sh $npm_package_wpps_options",
+		"lint:js:fix": "cd ../../wpps-scripts; sh lint-js.sh $npm_package_wpps_options -f 1;",
+		"lint:css": "cd ../../wpps-scripts; sh lint-css.sh $npm_package_wpps_options;",
+		"lint:css:fix": "cd ../../wpps-scripts; sh lint-css.sh $npm_package_wpps_options -f 1;",
+		"test:js": "cd ../../wpps-scripts; sh test-js.sh $npm_package_wpps_options;",
+		"zip": "cd ../../wpps-scripts; sh zip.sh $npm_package_wpps_options"
 	}
 }
