--- a/wp-modules/module-boilers/module-boilers/blockmodule/package.json
+++ b/wp-modules/module-boilers/module-boilers/blockmodule/package.json
@@ -5,19 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "wp-scripts build includes/js/src/index.js --output-path=includes/js/build/",
-    "check-engines": "wp-scripts check-engines",
-    "check-licenses": "wp-scripts check-licenses",
-    "format": "wp-scripts format",
-    "lint:css": "wp-scripts lint-style",
-    "lint:js": "wp-scripts lint-js",
-    "lint:js:fix": "npm run lint:js -- --fix",
-    "lint:md:docs": "wp-scripts lint-md-docs",
-    "lint:md:js": "wp-scripts lint-md-js",
-    "lint:pkg-json": "wp-scripts lint-pkg-json",
-    "packages-update": "wp-scripts packages-update",
-    "dev": "wp-scripts start includes/js/src/index.js --output-path=includes/js/build/",
-    "test:e2e": "wp-scripts test-e2e",
-    "test:unit": "wp-scripts test-unit-js"
+    "dev": "wp-scripts start includes/js/src/index.js --output-path=includes/js/build/"
   },
   "author": "",
   "license": "GPL v2 or greater",
